new file:   prisma/migrations/20260329070000_add_training_image_path/migration.sql 	modified:   prisma/schema.prisma 	modified:   src/app.ts 	modified:   src/middleware/imageUpload.middleware.ts 	modified:   src/modules/training/Training.controller.ts 	modified:   src/modules/training/training.routes.ts 	modified:   swagger-output.json
